[project]
name = "errand-dash"
version = "0.1.0"
description = ""
authors = [
    {name = "lady-thee",email = "onuhtheola3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[uvicorn] (>=0.116.1,<0.117.0)",
    "prisma (>=0.15.0,<0.16.0)",
    "webauthn (>=2.6.0,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
